--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Nicholas Winterle Daudt"
-  avatar           : "profile.png"
+  avatar           : "Foto_Nicholas.jpg"
   bio              : "Marine Ecologist, PhD candidate at the University of Otago"
   location         : "Dunedin, Aotearoa New Zealand"
   employer         :
