--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "                         "
+title                    : "Nicholas Winterle Daudt"
 title_separator          : "-"
 name                     : &name "Nicholas Winterle Daudt"
 description              : &description "Marine Ecologist and PhD candidate at the University of Otago"
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Nicholas Winterle Daudt"
+  name             : "Nicholas W. Daudt"
   avatar           : "Foto_Nicholas.jpg"
   bio              : "Marine Ecologist and PhD candidate at the University of Otago"
   location         : "Dunedin, Aotearoa New Zealand"
