--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,6 +11,9 @@ main:
     
   - title: "Portfolio"
     url: /portfolio/
+
+  - title: "Outreach"
+    url: /outreach/
     
   - title: "CV"
     url: /cv/
