--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
+  - title: "Whatever"
     url: /talks/    
 
   - title: "Teaching"
@@ -11,9 +11,6 @@ main:
     
   - title: "Portfolio"
     url: /portfolio/
-
-  - title: "Outreach"
-    url: /outreach/
     
   - title: "CV"
     url: /cv/
